# metadata-rag-engine

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-publish.yml
data/: sample_datahub_metadata.json
metadata_rag_engine/: config.py  logging_conf.py
metadata_rag_engine/api/: app.py  routes.py
metadata_rag_engine/cli/: main.py
metadata_rag_engine/core/: embedding.py  hashing.py  loader_datahub.py  models.py  normalize.py  rag.py  vector_store.py
tests/: test_hashing.py  test_normalize.py
