[project]
name = "metadata-rag-engine"
version = "0.1.0"
description = "Production-style metadata RAG engine"
authors = [{ name = "Alekhya Thulluru" }]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["metadata_rag_engine*"]
